--- a/package.json
+++ b/package.json
@@ -4,11 +4,19 @@
   "description": "",
   "main": "dist",
   "devDependencies": {
+    "@types/chai": "^4.2.15",
+    "@types/mocha": "^8.2.1",
+    "chai": "^4.3.4",
+    "mocha": "^8.3.2",
     "ts-node": "^9.1.1",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "typings": "^2.1.1"
   },
   "dependencies": {
     "@types/node": "^14.14.35"
+  },
+  "scripts": {
+    "test": "mocha -r ts-node/register tests/**/*.ts"
   },
   "license": "ISC"
 }
